# RMedia

./: .gitignore  README.md
JMedia/: pom.xml
JMedia/src/main/java/com/media/image/: ImageStyle.java  LoadLibs.java  Media.java  WebP.java
RMedia/: Cargo.toml
RMedia/java/com/media/image/: QrCode.java
RMedia/src/: image_qr_code.rs  image_style.rs  lib.rs
java/com/media/image/: Media.java  QrCodeParams.java
src/: error.rs  image_webp.rs
