[package]
name = "rs_media"
version = "1.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# LibC
[lib]
crate-type = ['cdylib']
name = "media_jni"


[dependencies]
jni = { version = '0.21' }
webp = "0.2"
image = "0.24"
fast_qr = { version = "0.10.2", features = ["svg", "image"] }
url = { version = "*", features = [] }
thiserror = "*"
